Fixed some styling errors and alignment issues

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
+body {
+    background-color: antiquewhite;
+    height: 100%;
+    margin: 0;
+}
+
+.headerName {
+    background-color: #333;
+    /* Example background color */
+    color: #fff;
+    /* Example text color */
+    text-align: left;
+    padding: 20px 0;
+    /* Adjust padding as needed */
+}
+
+.headerName h1 {
+    margin: 0;
+    /* Remove default margin for h1 */
+    margin-left: 10px;
+}
+
+
 .book-shelf-title {
     font-size: 40px;
     text-align: center;
@@ -47,6 +70,8 @@
     flex-direction: column;
     align-items: flex-end;
     margin-right: 40px;
+    margin-left: 40px;
+    margin-bottom: 10px;
     border-color: black;
     border-radius: 5px;
     border-style: solid;
@@ -57,7 +82,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
 .book-card {
